# scribe

./: README.md  bootstrap_messages.json  pyproject.toml
src/: ai.py  config.py  main.py
