[tool.poetry]
name = "scribe"
version = "0.1.0"
description = ""
authors = ["John Evans <lgastako@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"
ipdb = "^0.13.13"
pydantic = "^1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
