[tool.poetry]
name = "scribe"
version = "0.1.0"
description = ""
authors = ["John Evans <lgastako@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"
ipdb = "^0.13.13"
textual = "^0.28.1"
pytest = "^7.4.0"
openai = "^0.27.8"
pydantic = "^1.10.9"
requests = "^2.31.0"
tenacity = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
